# check_vpn_rust

./: .gitignore  AI.INSTRUCTIONS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  DEVELOPING.md  DEVELOPING_FULL.md  INSTALL.md  Makefile  README.dev-env.md  README.md  Vagrantfile  check_vpn.service  check_vpn.sh
.github/: instructions  promts
.github/workflows/: build_deb.yml  ci-matrix.yml  ci.yml  package.yml  release.yml
contrib/: Dockerfile  Dockerfile.debian  Dockerfile.fedora  Dockerfile.systemd  cargo-deb.sh  check_vpn.plist  check_vpn.service  check_vpn.spec  config.xml  fpm-build.sh  install-user.sh  install.sh  logrotate.conf  run_acceptance.sh  run_systemd_container.sh
contrib/packaging/: README.md  generate-selinux-policy.sh  postinst  prerm
examples/: check_vpn.xml  crossover  ifconfig.co.json  ip_api.json
scripts/: build-all.ps1  build-debian-docker.ps1  build-fedora-docker.ps1  build-windows.ps1  docker-build.ps1  docker-build.sh  install-hooks.sh  install.sh  pre-commit.sh  test-all-docker.ps1  test-all-docker.sh  vagrant_provision.sh
src/: actions.rs  app.rs  app_check.rs  cli.rs  completions.rs  config.rs  init_wizard.rs  ip_api.rs  json_io.rs  lib.rs  logging.rs  main.rs  metrics.rs  networking.rs  timer.rs  xml_io.rs
src/actions/: mod.rs  runner.rs
src/app/: check.rs  metrics.rs  mod.rs
src/cli/: legacy.rs  mod.rs
src/config/: mod.rs  serde_helpers.rs  validation.rs
src/fs_ops/: mod.rs
src/ip_api/: client.rs  mod.rs
src/json_io/: fs.rs  mod.rs  stream.rs
src/metrics/: mod.rs  response.rs  server.rs
src/networking/: connect.rs  (+2 more)
tests/: actions_run_tests.rs  actions_tests.rs  app_perform_check_tests.rs  app_tests.rs  cli_config_integration.rs  cli_help_tests.rs  cli_tests.rs  config_lookup_tests.rs  config_tests.rs  connectivity_tests.rs  custom_json_key_tests.rs  init_wizard_tests.rs  installer_tests.rs  ip_api_file_tests.rs  ip_api_integration.rs  ip_api_large_response_tests.rs  ip_api_partial_read_tests.rs  ip_api_retry_after_tests.rs  ip_api_sequence_tests.rs  ip_api_tests.rs  json_io_tests.rs  metrics_integration.rs  networking_tests.rs  networking_testsreal.rs  perform_check_tests.rs  providers_tests.rs  timer_tests.rs  xml_io_tests.rs
(+9 files in other folders)
