[package]
name = "check_vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"
ctrlc = "3.2"
anyhow = "1.0"
zbus = { version = "5.12.0", features = ["blocking"] }

# XML backends (optional, selected via features)
quick-xml = { version = "0.38.3", features = ["serialize"], optional = true }
serde-xml-rs = { version = "0.8.1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
httpmock = "0.8.2"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
serial_test = "3.2.0"
tempfile = "3"

[features]
default = ["xml_quick", "json_pretty"]
# Use quick-xml for fast serde-based XML de/ser
xml_quick = ["dep:quick-xml"]
# Use serde-xml-rs as the backend instead (slower, but sometimes more lenient)
xml_serde = ["dep:serde-xml-rs"]
# Deny unknown fields when deserializing Config and other structs
xml_strict = []
# Pretty-print XML output when writing files (best-effort)
xml_pretty = []
# Extra observability via tracing spans (requires opting in)
xml_tracing = ["dep:tracing"]
# Pretty-print JSON output when writing files (optional)
json_pretty = []
